# Catalyst

./: .gitignore  CMakeLists.txt
CatalystListener/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
CatalystPerformer/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Common/: CatalystBridge.h
